--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 ETHEREUM_BEACON_RPC_URL="https://rpc.ankr.com/eth/eth_sepolia_beacon"
 PARENT_CHAIN_RPC="http://101.44.25.36:8545"
-CHAIN_ID=
-DEPLOYER_PRIVATE_KEY=
-BATCH_POSTER_PRIVATE_KEY=
-VALIDATOR_PRIVATE_KEY=
+CHAIN_ID=your_id
+DEPLOYER_PRIVATE_KEY=your_key
+BATCH_POSTER_PRIVATE_KEY=your_key
+VALIDATOR_PRIVATE_KEY=your_key
+ORBIT_DEPLOYMENT_TRANSACTION_HASH=your_contarts_hash
