--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-ETHEREUM_BEACON_RPC_URL="https://rpc.ankr.com/eth/eth_sepolia_beacon"
+ETHEREUM_BEACON_RPC_URL="https://ethereum-sepolia-beacon-api.publicnode.com"
 PARENT_CHAIN_RPC="http://101.44.25.36:8545"
 CHAIN_ID=your_id
 DEPLOYER_PRIVATE_KEY=your_key
