--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,14 @@
 ETHEREUM_BEACON_RPC_URL="https://ethereum-sepolia-beacon-api.publicnode.com"
 PARENT_CHAIN_RPC="http://101.44.25.36:8545"
+CHAIN_NAME=your_network_name
 CHAIN_ID=your_id
 DEPLOYER_PRIVATE_KEY=your_key
 BATCH_POSTER_PRIVATE_KEY=your_key
 VALIDATOR_PRIVATE_KEY=your_key
 ORBIT_DEPLOYMENT_TRANSACTION_HASH=your_contarts_hash
+ORBIT_NETWORK_NAME=name
+ORBIT_CHAIN_LABEL=name
+ROLLUP_ADDRESS=your_address
+ROLLUP_OWNER_PRIVATE_KEY=your_key
+ORBIT_CHAIN_ID=your_key
+ORBIT_CHAIN_RPC=your_node_address
