custom token add

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 ETHEREUM_BEACON_RPC_URL="https://ethereum-sepolia-beacon-api.publicnode.com"
 PARENT_CHAIN_RPC="http://101.44.25.36:8545"
+CUSTOM_FEE_TOKEN_ADDRESS=0x343E666a4F648c423D198AD41c75Ac70Af694965
 CHAIN_NAME=your_network_name
 CHAIN_ID=your_id
 DEPLOYER_PRIVATE_KEY=your_key
