--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,4 +20,4 @@ services:
     ports:
       - "8449:8449"
       - "8549:8549"
-    command: --conf.file /home/user/.arbitrum/node-config.json --node.block-validator.memory-free-limit "" --persistent.global-config /home/user/${CHAIN_NAME}
+    command: --conf.file /home/user/.arbitrum/node-config.json --persistent.global-config /home/user/${CHAIN_NAME}
