--- a/contracts/package.json
+++ b/contracts/package.json
@@ -1,18 +1,13 @@
 {
-  "name": "create-rollup-eth",
+  "name": "create-token-bridge-custom-fee-token",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "tsc --outDir dist && node ./dist/index.js",
-    "dev:low-level": "tsc --outDir dist && node ./dist/low_level.js"
+    "dev": "tsc --outDir dist && node ./dist/index.js"
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
     "typescript": "^5.2.2"
-  },
-  "dependencies": {
-    "@arbitrum/orbit-sdk": "^0.22.0",
-    "viem": "^1.20.0"
   }
 }
